Copyright alignment fix and add the character

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -27,7 +27,7 @@ a{
 p{
   align-items: center;
 }
-  #copyright{
+   span  h4 #copyright{
   color: gray;
   text-align: right;
 }
